--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,6 +11,7 @@
       font-family: 'Roboto', sans-serif;
     }
   </style>
+  <link rel="icon" href="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FoXBYw%2FbtsIPXrDjTc%2FpLzzFxLchTAtiBSFLAfEX1%2Fimg.png" type="image/x-icon">
 </head>
 <body class="bg-gray-100 flex items-center justify-center min-h-screen">
 <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-sm">
@@ -33,7 +34,7 @@
   </form>
   <a href="/auth/kakao" class="block w-full bg-yellow-500 text-white py-2 rounded-lg hover:bg-yellow-600 text-center">카카오 로그인</a>
   <div th:if="${param.error}" class="alert alert-danger mt-4">
-    <p th:text="${session.error}" class="text-red-500 text-center">Invalid username or password.</p>
+    <p th:if="${session.error}" class="text-red-500 text-center">Invalid username or password.</p>
   </div>
 </div>
 
