--- a/src/main/resources/templates/userboardCollection.html
+++ b/src/main/resources/templates/userboardCollection.html
@@ -10,6 +10,7 @@
       font-family: 'Noto Sans KR', sans-serif;
     }
   </style>
+  <link rel="icon" href="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FoXBYw%2FbtsIPXrDjTc%2FpLzzFxLchTAtiBSFLAfEX1%2Fimg.png" type="image/x-icon">
 </head>
 <body class="bg-gray-100">
 <header class="bg-white shadow">
