--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,137 +1,155 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>회원가입</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap"
-        rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Noto Sans KR', sans-serif;
-    }
-  </style>
-  <link rel="icon"
-        href="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FoXBYw%2FbtsIPXrDjTc%2FpLzzFxLchTAtiBSFLAfEX1%2Fimg.png"
-        type="image/x-icon">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>회원가입</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap"
+          rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Noto Sans KR', sans-serif;
+        }
+    </style>
+    <link rel="icon"
+          href="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FoXBYw%2FbtsIPXrDjTc%2FpLzzFxLchTAtiBSFLAfEX1%2Fimg.png"
+          type="image/x-icon">
 </head>
 <body class="bg-gray-100 flex items-center justify-center min-h-screen">
 <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-md">
-  <div class="mb-6">
-    <img
-        src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FoXBYw%2FbtsIPXrDjTc%2FpLzzFxLchTAtiBSFLAfEX1%2Fimg.png"
-        alt="Team Logo" class="mx-auto mb-4">
-  </div>
-  <form id="registerForm">
-    <div class="mb-4">
-      <label for="username" class="block text-gray-700">아이디</label>
-      <input type="text" id="username" class="w-full px-3 py-2 border rounded-lg"
-             placeholder="아이디를 입력해주세요" required>
+    <div class="mb-6">
+        <img
+                src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FoXBYw%2FbtsIPXrDjTc%2FpLzzFxLchTAtiBSFLAfEX1%2Fimg.png"
+                alt="Team Logo" class="mx-auto mb-4">
     </div>
-    <div class="mb-4">
-      <label for="nickname" class="block text-gray-700">이름</label>
-      <input type="text" id="nickname" class="w-full px-3 py-2 border rounded-lg"
-             placeholder="이름을 입력해주세요" required>
-    </div>
-    <div class="mb-4">
-      <label for="password" class="block text-gray-700">비밀번호</label>
-      <input type="password" id="password" class="w-full px-3 py-2 border rounded-lg"
-             placeholder="비밀번호를 입력해주세요" required>
-    </div>
-    <div class="mb-4">
-      <label for="confirmPassword" class="block text-gray-700">비밀번호 확인</label>
-      <input type="password" id="confirmPassword" class="w-full px-3 py-2 border rounded-lg"
-             placeholder="비밀번호를 다시 입력해주세요" required>
-    </div>
-    <div class="mb-4">
-      <label for="email" class="block text-gray-700">이메일</label>
-      <div class="flex">
-        <input type="email" id="email" class="w-full px-3 py-2 border rounded-l-lg"
-               placeholder="이메일을 입력해주세요" required>
-        <button th:action="@{/email/send}" th:method="post" type="button" id="sendCode" class="bg-blue-500 text-white px-4 py-2 rounded-r-lg">인증
-          번호 전송
-        </button>
-      </div>
-    </div>
-    <div class="mb-4">
-      <label for="emailCode" class="block text-gray-700">이메일 인증 번호</label>
-      <input type="text" id="emailCode" class="w-full px-3 py-2 border rounded-lg"
-             placeholder="인증 번호를 입력해주세요" required>
-    </div>
-    <div class="mb-4">
-      <button type="button" id="verifyCode"
-              class="bg-blue-500 text-white w-full px-4 py-2 rounded-lg">인증 번호 확인
-      </button>
-    </div>
-    <div class="mb-4">
-      <label class="block text-gray-700 mb-2">성별</label>
-      <div class="flex justify-between">
-        <label class="flex items-center">
-          <input type="radio" name="gender" value="male" class="mr-2" required> 남성
-        </label>
-        <label class="flex items-center">
-          <input type="radio" name="gender" value="female" class="mr-2" required> 여성
-        </label>
-      </div>
-    </div>
-    <div>
-      <button type="submit" class="bg-green-500 text-white w-full px-4 py-2 rounded-lg">회원가입
-      </button>
-    </div>
-  </form>
+    <form id="registerForm" th:action="@{/auth/signup}" method="POST">
+        <div class="mb-4">
+            <label for="username" class="block text-gray-700">아이디</label>
+            <input type="text" id="username" class="w-full px-3 py-2 border rounded-lg"
+                   placeholder="아이디를 입력해주세요" required>
+        </div>
+        <div class="mb-4">
+            <label for="nickname" class="block text-gray-700">이름</label>
+            <input type="text" id="nickname" class="w-full px-3 py-2 border rounded-lg"
+                   placeholder="이름을 입력해주세요" th:value="${param.nickname}" required>
+        </div>
+        <div class="mb-4">
+            <label for="password" class="block text-gray-700">비밀번호</label>
+            <input type="password" id="password" class="w-full px-3 py-2 border rounded-lg"
+                   placeholder="비밀번호를 입력해주세요" required>
+        </div>
+        <div class="mb-4">
+            <label for="confirmPassword" class="block text-gray-700">비밀번호 확인</label>
+            <input type="password" id="confirmPassword" class="w-full px-3 py-2 border rounded-lg"
+                   placeholder="비밀번호를 다시 입력해주세요" required>
+        </div>
+        <div class="mb-4">
+            <label for="email" class="block text-gray-700">이메일</label>
+            <div class="flex">
+                <input type="email" id="email" class="w-full px-3 py-2 border rounded-l-lg"
+                       placeholder="이메일을 입력해주세요" required>
+                <button th:action="@{/auth/email/send}" th:method="post" type="button" id="sendCode"
+                        class="bg-blue-500 text-white px-4 py-2 rounded-r-lg">인증
+                    번호 전송
+                </button>
+            </div>
+        </div>
+        <div class="mb-4">
+            <label for="emailCode" class="block text-gray-700">이메일 인증 번호</label>
+            <input type="text" id="emailCode" class="w-full px-3 py-2 border rounded-lg"
+                   placeholder="인증 번호를 입력해주세요" required>
+        </div>
+        <div class="mb-4">
+            <button type="button" id="verifyCode"
+                    class="bg-blue-500 text-white w-full px-4 py-2 rounded-lg">인증 번호 확인
+            </button>
+        </div>
+        <div class="mb-4">
+            <label class="block text-gray-700 mb-2">성별</label>
+            <div class="flex justify-between">
+                <label class="flex items-center">
+                    <input type="radio" name="gender" value="male" class="mr-2" required> 남성
+                </label>
+                <label class="flex items-center">
+                    <input type="radio" name="gender" value="female" class="mr-2" required> 여성
+                </label>
+            </div>
+        </div>
+        <input type="hidden" id="oauth" name="oauth" value="LOCAL">
+        <div>
+            <button type="submit" class="bg-green-500 text-white w-full px-4 py-2 rounded-lg">회원가입
+            </button>
+        </div>
+    </form>
 </div>
 
 <script type="module">
-  document.getElementById('sendCode').addEventListener('click', () => {
-    const email = document.getElementById('email').value;
-    const emailPattern = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
-
-    if (email.trim() === "") {
-      alert('이메일을 입력해주세요.');
-    } else if (!emailPattern.test(email)) {
-      alert('유효한 이메일 주소를 입력해주세요.');
-    } else {
-      alert('인증 번호가 이메일로 전송되었습니다.');
-      // Here you would typically make a request to your server to send the verification code.
+    const urlParams = new URLSearchParams(window.location.search);
+    const oauth = urlParams.get('oauth');
+    if (oauth) {
+        document.getElementById('oauth').value = oauth;
     }
-  });
+    document.getElementById('sendCode').addEventListener('click', () => {
+        const email = document.getElementById('email').value;
+        const emailPattern = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
 
-  document.getElementById('verifyCode').addEventListener('click', () => {
-    const emailCode = document.getElementById('emailCode').value;
-    if (emailCode === '123456') {
-      alert('정상적으로 처리되었습니다.');
-    } else {
-      alert('인증번호가 틀립니다. 다시 확인하세요.');
-    }
-  });
+        if (email.trim() === "") {
+            alert('이메일을 입력해주세요.');
+        } else if (!emailPattern.test(email)) {
+            alert('유효한 이메일 주소를 입력해주세요.');
+        } else {
+            alert('인증 번호가 이메일로 전송되었습니다.');
+            // Here you would typically make a request to your server to send the verification code.
+        }
+    });
 
-  document.getElementById('registerForm').addEventListener('submit', (e) => {
-    e.preventDefault();
-    const username = document.getElementById('username').value;
-    const nickname = document.getElementById('nickname').value;
-    const password = document.getElementById('password').value;
-    const confirmPassword = document.getElementById('confirmPassword').value;
-    const email = document.getElementById('email').value;
-    const emailCode = document.getElementById('emailCode').value;
-    const gender = document.querySelector('input[name="gender"]:checked').value;
+    document.getElementById('verifyCode').addEventListener('click', () => {
+        const emailCode = document.getElementById('emailCode').value;
+        if (emailCode === '123456') {
+            alert('정상적으로 처리되었습니다.');
+        } else {
+            alert('인증번호가 틀립니다. 다시 확인하세요.');
+        }
+    });
 
-    if (password !== confirmPassword) {
-      alert('비밀번호가 일치하지 않습니다.');
-      return;
-    }
+    document.getElementById('registerForm').addEventListener('submit', async (e) => {
+        e.preventDefault();
+        const username = document.getElementById('username').value;
+        const nickname = document.getElementById('nickname').value;
+        const password = document.getElementById('password').value;
+        const confirmPassword = document.getElementById('confirmPassword').value;
+        const email = document.getElementById('email').value;
+        const emailCode = document.getElementById('emailCode').value;
+        const oauth = document.getElementById('oauth').value;
+        // const gender = document.querySelector('input[name="gender"]:checked').value;
 
-    if (emailCode !== '123456') {
-      alert('이메일 인증이 완료되지 않았습니다.');
-      return;
-    }
+        if (password !== confirmPassword) {
+            alert('비밀번호가 일치하지 않습니다.');
+            return;
+        }
 
-    // Simulate form submission
-    alert('회원가입이 완료되었습니다.');
-    window.location.href = '/register_information';
-  });
-</script>
+        if (emailCode !== '123456') {
+            alert('이메일 인증이 완료되지 않았습니다.');
+            return;
+        }
 
+        const response = await fetch('/auth/signup', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+            },
+            body: JSON.stringify({username, nickname, password, email, oauth})
+        });
+        console.log("리스폰스 : " + response)
+        if (response.ok) {
+            alert('회원가입이 완료되었습니다.');
+            window.location.href = '/register_information';
+        } else {
+            // Simulate form submission
+            alert('아이디는 영문+숫자로 최소 4자 이상 10자 이하, 비밀번호는 영문 소문자 + 대문자 + 숫자 8자이상 15자 이하');
+        }
+    });
 </script>
 </body>
 </html>
