--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -45,7 +45,7 @@
     <div class="mb-4">
       <label for="nickname" class="block text-gray-700">이름</label>
       <input type="text" id="nickname" class="w-full px-3 py-2 border rounded-lg"
-             placeholder="이름을 입력해주세요" required>
+             placeholder="닉네임을 입력해주세요" required>
     </div>
     <div class="mb-4">
       <label for="password" class="block text-gray-700">비밀번호</label>
