fix : 사진 위치 변경

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -58,7 +58,7 @@
 <body class="bg-gray-100 text-black">
 <header class="flex justify-between items-center p-4 bg-white shadow">
   <div class="flex items-center">
-    <img src="LOGO.png" width="70" height="70" alt="Logo" class="mr-4">
+    <img src="../static/images/LOGO.png" width="70" height="70" alt="Logo" class="mr-4">
     <nav>
       <a href="#" class="mr-4">오늘의 동친</a>
       <a href="#" class="mr-4">인기 급 상승 모임</a>
