--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -60,7 +60,7 @@
   <div class="flex items-center">
     <img src="../static/images/LOGO.png" width="70" height="70" alt="Logo" class="mr-4">
     <nav>
-      <a href="#" class="mr-4">오늘의 동친</a>
+      <a href="meetsCollection.html" class="mr-4">오늘의 동친</a>
       <a href="#" class="mr-4">인기 급 상승 모임</a>
       <a href="#" class="mr-4">내 주변 모임</a>
     </nav>
@@ -75,7 +75,7 @@
   <section class="mb-8">
     <div class="flex justify-between items-center mb-4">
       <h2 class="text-xl font-bold">오늘의 동친</h2>
-      <a href="dongchin.html" class="text-blue-500">더보기</a>
+      <a href="meetsCollection.html" class="text-blue-500">더보기</a>
     </div>
     <div class="relative">
       <div class="carousel" id="carousel1"></div>
